compiler/tools/fpp-check/test/connection_pattern/undef_source.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/undef_source.fpp:2.31
  health connections instance $health
                              ^
error: cannot find component instance `health` in this scope
